Add generating pdfs from html
